--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"lib": ["es5", "es6", "ESNext", "DOM"],
-		"rootDir": "src"
+		"rootDir": "src",
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"strict": true
 	}
 }
