--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "@types/clamp-js": "^0.7.2",
+    "clamp-js": "^0.7.0",
     "firebase": "^8.4.2"
   }
 }
